deployment/pdns-mysql/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab-dns-mysql
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
