deployment/pdns-mysql/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lab-pdns-mysql
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: lab-pdns-mysql
spec:
  selector:
    app: lab-pdns-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
